# iot-telemetry-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  fake_mode.sh  fake_serial_port_socat.sh  system_mode.sh  test_fake_uart_port.sh  uart_mode.sh
.github/workflows/: cmake.yml
docs/: debugging-walkthrough.md
include/iot/: app.hpp  config.hpp  fake_sensor_reader.hpp  logger.hpp  menu.hpp  sensor.hpp  sensor_reader.hpp  system_sensor_reader.hpp  telemetry.hpp  uart_protocol.hpp  uart_sensor_reader.hpp
src/: app.cpp  config.cpp  fake_sensor_reader.cpp  logger.cpp  main.cpp  menu.cpp  sensor.cpp  system_sensor_reader.cpp  telemetry.cpp  uart_protocol.cpp  uart_sensor_reader.cpp
tests/: CMakeLists.txt  test_telemetry.cpp  test_uart_protocol.cpp
